Bug 1856762 - Visit implicit code inside lambdas. r=asuth

This reuses the AutoSetContext machinery initially implemented for
constructors to visit the implicit code generated for lambdas too,
giving us the data required to understand the template-dependent code
in lambdas.

AutoSetContext is adapted to support AutoSetContext::Decl == nullptr
because, contrary to CXXConstructorDecl, LambdaExprs aren't NamedDecls.

See https://github.com/mozsearch/mozsearch/pull/821

Differential Revision: https://phabricator.services.mozilla.com/D224610